Closed Bug 1864592 Opened 2 years ago Closed 2 years ago

[loong64][mips64] wasm/gc/arrays.js failed on loong64 and mips64 simulator

Categories

(Core :: JavaScript: WebAssembly, defect, P3)

Other
Unspecified
defect

Tracking

()

RESOLVED FIXED
121 Branch
Tracking Status
firefox121 --- fixed

People

(Reporter: zhaojiazhong-hf, Assigned: zhaojiazhong-hf)

References

(Blocks 2 open bugs)

Details

Attachments

(1 file)

A new function prototype Int32_GeneralGeneralInt32Int32Int32GeneralInt32 is added in bug 1851864, which should be ported to LoongArch64 and mips64 simulators.

Assignee: nobody → zhaojiazhong-hf
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Attachment #9363435 - Attachment description: WIP: Bug 1864592 - [loong64][mips64] Add Int32_GeneralGeneralInt32Int32Int32GeneralInt32 prototype in simulator. → Bug 1864592 - [loong64][mips64] Add Int32_GeneralGeneralInt32Int32Int32GeneralInt32 prototype in simulator.
Severity: -- → S3
Priority: -- → P3
Pushed by ydelendik@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/3f59f052ab2c [loong64][mips64] Add Int32_GeneralGeneralInt32Int32Int32GeneralInt32 prototype in simulator. r=yury
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 121 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: