Bug 1864592 - [loong64][mips64] Add Int32_GeneralGeneralInt32Int32Int32GeneralInt32 prototype in simulator. r=yury

Differential Revision: https://phabricator.services.mozilla.com/D193524